kmymoney/plugins/ofximport/dialogs/konlinebankingstatus.cpp
@@ -76,6 +76,12 @@ KOnlineBankingStatus::KOnlineBankingStatus(const MyMoneyAccount& acc, QWidget *p
 
   m_appId = new OfxAppVersion(m_applicationCombo, m_applicationEdit, settings.value("appId"));
   m_headerVersion = new OfxHeaderVersion(m_headerVersionCombo, settings.value("kmmofx-headerVersion"));
+  m_clientUidEdit->setText(settings.value("clientUid"));
+#ifndef LIBOFX_HAVE_CLIENTUID
+  // in case the installed libofx does not support clientuid
+  // we disable the widget
+  m_clientUidEdit->setEnabled(false);
+#endif
 
   connect(m_applicationCombo, SIGNAL(currentIndexChanged(int)), this, SLOT(applicationSelectionChanged()));
   m_headerVersionEdit->hide();
