kmymoney/plugins/ofximport/ofximporterplugin.cpp
@@ -655,6 +655,10 @@ MyMoneyKeyValueContainer OfxImporterPlugin::onlineBankingSettings(const MyMoneyK
     kvp.setValue("kmmofx-pickDate", QString::number(d->m_statusDlg->m_pickDateRB->isChecked()));
     kvp.setValue("kmmofx-specificDate", d->m_statusDlg->m_specificDate->date().toString());
     kvp.setValue("kmmofx-preferName", QString::number(d->m_statusDlg->m_preferredPayee->currentIndex()));
+    if (!d->m_statusDlg->m_clientUidEdit->text().isEmpty())
+      kvp.setValue("clientUid", d->m_statusDlg->m_clientUidEdit->text());
+    else
+      kvp.deletePair("clientUid");
     // TODO get rid of pre 4.6 values
     // kvp.deletePair("kmmofx-preferPayeeid");
   }
